[package]
name = "cyfs-sn"
version = "0.4.0"
edition = "2021"
authors = ["BuckyOS DAO","@waterflier"]

[dependencies]
anyhow = "*"
log = "*"
lazy_static = "*"
tokio = { version = "*", features = ["full"] }

async-trait = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
env_logger = "*"
url = "*"
rusqlite =  { version = "*", features = ["bundled"] }
rand = "0.9.0"
once_cell = "*"
jsonwebtoken = "*"

buckyos-kit = { git = "https://github.com/buckyos/buckyos-base.git", package = "buckyos-kit" }
cyfs-gateway-lib = { path = "../cyfs-gateway-lib" }
kRPC = { git = "https://github.com/buckyos/buckyos-base.git", package = "kRPC" }

name-client = { git = "https://github.com/buckyos/buckyos-base.git", package = "name-client" }
name-lib = { git = "https://github.com/buckyos/buckyos-base.git", package = "name-lib" }
#buckyos-api = { path = "../../kernel/buckyos-api" }