[package]
name = "cyfs-sn"
version.workspace = true
edition = "2021"
authors = ["BuckyOS DAO","@waterflier"]

[dependencies]
anyhow = "*"
log = "*"
lazy_static = "*"
tokio = { version = "*", features = ["full"] }

async-trait = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
env_logger = "*"
url = "*"
rusqlite =  { version = "*", features = ["bundled"] }
rand = "0.9.0"
once_cell = "*"
jsonwebtoken = { version = "*", features = ["aws_lc_rs"] }

buckyos-kit = { workspace = true }
cyfs-gateway-lib = { path = "../cyfs-gateway-lib" }
kRPC = { workspace = true }
name-client = { workspace = true }
name-lib = { workspace = true }
#buckyos-api = { path = "../../kernel/buckyos-api" }