[package]
name = "cyfs-socks"
version = "0.1.0"
edition = "2021"
authors = ["BuckyOS DAO","@lurenpluto"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
boa_engine = "*"
boa_runtime  = "*"
url = "*"
thiserror = "*"
async-trait = "*"
reqwest = "*"
log = "*"
trust-dns-resolver = "*"
futures-util = "*"
regex = "*"
buckyos-kit = { path = "../../components/buckyos-kit" }
serde_json = "*"
serde = "*"