[package]
name = "cyfs-socks"
version.workspace = true
edition = "2021"
authors = ["BuckyOS DAO","@lurenpluto"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
boa_engine = "*"
boa_runtime  = "*"
url = "*"
thiserror = "*"
async-trait = "*"
reqwest = "*"
log = "*"
trust-dns-resolver = "*"
futures-util = "*"
regex = "*"

serde_json = "*"
serde = "*"
fast-socks5 = "*"
once_cell = "*"
chrono = "*"

buckyos-kit = { workspace = true }