[package]
name = "cyfs-warp"
version = "0.4.0"
edition = "2021"
authors = ["BuckyOS DAO","@waterflier"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]

log = "*"
lazy_static = "*"
tokio = { version = "*", features = ["full"] }
tokio-util = { version = "*", features = ["io"] }
tokio-stream = { version = "*", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
rustls = "0.21"
rustls-pemfile = "1"
tokio-rustls = "0.24"
futures-util = "*"
toml = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
anyhow = "*"
env_logger = "*"
url = "*"
futures = "*"
mime_guess = "*"
async-stream = "*"
rand = "*"
async-trait = "*"
thiserror = "*"


ndn-lib = { path = "../../components/ndn-lib" }
cyfs-gateway-lib = { path = "../cyfs-gateway-lib" }
cyfs-sn = { path = "../cyfs-sn" }
buckyos-kit = { path = "../../components/buckyos-kit" }
kRPC = { path = "../../kernel/kRPC" }


[dev-dependencies]
tempfile = "*"
rand = "*"
