[package]
name = "cyfs-warp"
version = "0.4.0"
edition = "2021"
authors = ["BuckyOS DAO","@waterflier"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]

log = "*"
lazy_static = "*"
tokio = { version = "*", features = ["full"] }
tokio-util = { version = "*", features = ["io"] }
tokio-stream = { version = "*", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
rustls = "0.21"
rustls-pemfile = "1"
tokio-rustls = "0.24"
futures-util = "*"
toml = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
anyhow = "*"
env_logger = "*"
url = "*"
futures = "*"
mime_guess = "*"
async-stream = "*"
rand = "*"
async-trait = "*"
thiserror = "*"


ndn-lib = { git = "https://github.com/buckyos/cyfs-ndn.git", package = "ndn-lib" }
cyfs-gateway-lib = { path = "../cyfs-gateway-lib" }
cyfs-sn = { path = "../cyfs-sn" }
buckyos-kit = { git = "https://github.com/buckyos/buckyos-base.git", package = "buckyos-kit" }
kRPC = { git = "https://github.com/buckyos/buckyos-base.git", package = "kRPC" }


[dev-dependencies]
tempfile = "*"
rand = "*"
