[package]
name = "cyfs_gateway"
version = "0.4.0"
edition = "2021"
authors = ["BuckyOS DAO","@waterflier","@lurenpluto"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "*"
log = "*"
url = "*"
tokio = { version = "*", features = ["full","tracing"] }
console-subscriber = { version = "*" }
async-trait = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
lazy_static = "*"
clap = "*"
env_logger = "*"
bytes = "*"
dirs = "*"
once_cell = "*"
anyhow = "*"

cyfs-gateway-lib = { path = "../cyfs-gateway-lib" }
buckyos-kit = { path = "../../components/buckyos-kit" }
name-client = { path = "../../components/name-client" }
name-lib = { path = "../../components/name-lib" }

cyfs-warp = { path= "../cyfs-warp"}
cyfs-sn = { path = "../cyfs-sn" }
cyfs-dns = { path = "../cyfs-dns" }
cyfs-socks = { path = "../cyfs-socks" }




