[package]
name = "cyfs_gateway"
version.workspace = true
edition = "2021"
authors = ["BuckyOS DAO","@waterflier","@lurenpluto"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "*"
log = "*"
url = "*"
tokio = { version = "*", features = ["full","tracing"] }
console-subscriber = { version = "*" }
async-trait = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
lazy_static = "*"
clap = "*"
env_logger = "*"
bytes = "*"
dirs = "*"
once_cell = "*"
anyhow = "*"
buckyos-kit= { workspace = true }
buckyos-tracing = { workspace = true }
name-client = { workspace = true }
name-lib = { workspace = true }

buckyos-api = { path = "../../kernel/buckyos-api" }
cyfs-gateway-lib = { path = "../cyfs-gateway-lib" }
cyfs-warp = { path= "../cyfs-warp"}
cyfs-sn = { path = "../cyfs-sn" }
cyfs-dns = { path = "../cyfs-dns" }
cyfs-socks = { path = "../cyfs-socks" }




